add missing endpoints
