# routes/api.php
@@ -14,4 +14,8 @@ use Illuminate\Http\Request;
 */
 
 Route::middleware('auth.basic')->get('/list', 'MessageController@index');
+Route::middleware('auth.basic')->get('/listArchived', 'MessageController@indexArchived');
 Route::middleware('auth.basic')->get('/message/{uid}', 'MessageController@read')->where('uid', '[0-9]+');
+Route::middleware('auth.basic')->get('/show/{uid}', 'MessageController@show')->where('uid', '[0-9]+');
+Route::middleware('auth.basic')->put('/read/{uid}', 'MessageController@read')->where('uid', '[0-9]+');
+Route::middleware('auth.basic')->put('/archive/{uid}', 'MessageController@archive')->where('uid', '[0-9]+');
